CTMIT-630: Fix logos in UTL on IE8 --  had to make the logos bigger on sm

--- a/src/main/webapp/bundles/utilities/less/logos.less
+++ b/src/main/webapp/bundles/utilities/less/logos.less
@@ -12,10 +12,10 @@
 }
 
 .companyLogo {
-	 .providersHighResSpriteImages(~"utilities"; ~"logo_"; @providers-list; @logo-xs-scale; ~"");
+	 .providersHighResSpriteImages(~"utilities"; ~"logo_"; @providers-list;);
 }
 
-@media (@sm) {
+@media (@sm-only) {
 	.companyLogo {
 		.providersHighResSpriteImages(~"utilities"; ~"logo_"; @providers-list; @logo-xs-scale; ~"");
 	}
